# gx2-texture

./: CMakeLists.txt  README.md  main.c
shaders/: texture_shader.gsh  texture_shader.psh
